err/django-chump.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chump'...
Compiling './lib/python3.5/site-packages/chump/views.py'...
***   File "./lib/python3.5/site-packages/chump/views.py", line 43
    except ChimpyException, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_chump-0.1.egg-info'...
Listing './lib/python3.5/site-packages/django_mailchimp_v1.3-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/mailchimp'...
Compiling './lib/python3.5/site-packages/mailchimp/chimp.py'...
***   File "./lib/python3.5/site-packages/mailchimp/chimp.py", line 165
    raise AttributeError, attr
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mailchimp/chimpy'...
Compiling './lib/python3.5/site-packages/mailchimp/chimpy/chimpy.py'...
***   File "./lib/python3.5/site-packages/mailchimp/chimpy/chimpy.py", line 46
    print __name__, "making request with parameters"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mailchimp/chimpy/test_chimpy.py'...
***   File "./lib/python3.5/site-packages/mailchimp/chimpy/test_chimpy.py", line 69
    print members
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mailchimp/locale'...
Listing './lib/python3.5/site-packages/mailchimp/locale/de'...
Listing './lib/python3.5/site-packages/mailchimp/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mailchimp/locale/en'...
Listing './lib/python3.5/site-packages/mailchimp/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mailchimp/locale/fr'...
Listing './lib/python3.5/site-packages/mailchimp/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mailchimp/locale/it'...
Listing './lib/python3.5/site-packages/mailchimp/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mailchimp/management'...
Listing './lib/python3.5/site-packages/mailchimp/management/commands'...
Compiling './lib/python3.5/site-packages/mailchimp/management/commands/mcdequeue.py'...
***   File "./lib/python3.5/site-packages/mailchimp/management/commands/mcdequeue.py", line 13
    print 'Dequeueing Campaigns'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mailchimp/management/commands/mcmakemerge.py'...
***   File "./lib/python3.5/site-packages/mailchimp/management/commands/mcmakemerge.py", line 9
    print 'You have to specify exactly one argument to this command'
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mailchimp/management/commands/mcsitegroups.py'...
***   File "./lib/python3.5/site-packages/mailchimp/management/commands/mcsitegroups.py", line 8
    print 'Installing site segment groups for all lists and all sites'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mailchimp/management/commands/mcwebhooks.py'...
***   File "./lib/python3.5/site-packages/mailchimp/management/commands/mcwebhooks.py", line 7
    print 'Installing webhooks for all lists'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mailchimp/migrations'...
Listing './lib/python3.5/site-packages/mailchimp/templates'...
Listing './lib/python3.5/site-packages/mailchimp/templates/mailchimp'...
Listing './lib/python3.5/site-packages/mailchimp/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
